四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -478,30 +478,26 @@ c1 = plot3(ax, 0, 0, 0, 'Color', [0 0 0]);
 c2 = plot3(ax, 0, 0, 0, 'Color', [0 0 0]);
 c3 = plot3(ax, 0, 0, 0, 'Color', [0 0 0]);
 c4 = plot3(ax, 0, 0, 0, 'Color', [0 0 0]);
+
 % 主循环：姿态变换与绘图
 for i = 1:1:size(t,1)
-
 quadrotor_pos = position(i,:)'; % 四旋翼在地球坐标系的位置 [x y z]
-
 phi = angle(i,1); % 欧拉角 phi theta psi
-
 theta = angle(i,2);
-
 psi = angle(i,3);
 
 %% 机体坐标系到地球坐标系的旋转变换
-
 R = [cos(theta)*cos(psi) sin(phi)*sin(theta)*cos(psi)-cos(phi)*sin(psi) cos(phi)*sin(theta)*cos(psi)+sin(phi)*sin(psi);
 
 cos(theta)*sin(psi) sin(phi)*sin(theta)*sin(psi)+cos(phi)*cos(psi) cos(phi)*sin(theta)*sin(psi)-sin(phi)*cos(psi);
 
--sin(theta) sin(phi)*cos(theta) cos(phi)*cos(theta)]; % 旋转矩阵
+-sin(theta) sin(phi)*cos(theta) cos(phi)*cos(theta)];
+% 3D旋转矩阵（Z-Y-X顺序）
 
 wHb = [R quadrotor_pos; 0 0 0 1]; % 定义一个增广矩阵
 
 quadrotor_world = wHb * quadrotor_body; % [4x4][4x6]
-
-quadrotor_atti = quadrotor_world(1:3, :); % 得到四旋翼关键坐标点在地球坐标系的位置，用于画四旋翼真实姿态
+quadrotor_atti = quadrotor_world(1:3, :); % 坐标变换,得到四旋翼关键坐标点在地球坐标系的位置，用于画四旋翼真实姿态
 
 %% 画四旋翼结构
 
@@ -544,7 +540,7 @@ end
 end~~删除线文本~~
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDU5Mzg1ODUzLC0zMjk3Mjk1NDIsOTc0OD
+eyJoaXN0b3J5IjpbOTI5NjYxNDE2LC0zMjk3Mjk1NDIsOTc0OD
 QzOTYzLDYwODMzMzMzMCwxNTg0MjMzMzAzLC0xMzMwNDg1NTEw
 LC01MzE5NzkyMjksMTA0Mzg0MzI0LDEyOTY5NTcxMTAsMTIxMT
 k3OTAxNywtMTU4MTUyMTIzOCwtOTkyOTczNjcwLDM1NTAwNTQ1
