四旋翼无人机轨迹三维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -494,15 +494,16 @@ cos(theta)*sin(psi) sin(phi)*sin(theta)*sin(psi)+cos(phi)*cos(psi) cos(phi)*sin(
 -sin(theta) sin(phi)*cos(theta) cos(phi)*cos(theta)];
 % 3D旋转矩阵（Z-Y-X顺序）
 
-wHb = [R quadrotor_pos; 0 0 0 1]; % 定义一个增广矩阵
+wHb = [R quadrotor_pos; 0 0 0 1]; 
+% 定义一个增广矩阵(齐次变换矩阵)
 
 quadrotor_world = wHb * quadrotor_body; % [4x4][4x6]
-quadrotor_atti = quadrotor_world(1:3, :); % 坐标变换,得到四旋翼关键坐标点在地球坐标系的位置，用于画四旋翼真实姿态
+quadrotor_atti = quadrotor_world(1:3, :); 
+% 坐标变换,得到四旋翼关键坐标点在地球坐标系的位置，用于画四旋翼真实姿态
 
 %% 画四旋翼结构
 
 % 电机和机架
-
 set(h1,'Xdata',quadrotor_atti(1,[1 3]),'Ydata',quadrotor_atti(2,[1 3]),'Zdata',quadrotor_atti(3,[1 3])); % x轴机臂和1、3号电机
 
 set(h2,'Xdata',quadrotor_atti(1,[2 4]),'Ydata',quadrotor_atti(2,[2 4]),'Zdata',quadrotor_atti(3,[2 4])); % y轴机臂和2、4号电机
@@ -534,17 +535,14 @@ set(c4,'Xdata',temp(1,:),'Ydata',temp(2,:),'Zdata',temp(3,:));
 set(line,'Xdata',position(1:i,1),'Ydata',position(1:i,2),'Zdata',position(1:i,3)); % 画四旋翼运动轨迹
 
 drawnow;
-
 end
-
-end~~删除线文本~~
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTI5NjYxNDE2LC0zMjk3Mjk1NDIsOTc0OD
-QzOTYzLDYwODMzMzMzMCwxNTg0MjMzMzAzLC0xMzMwNDg1NTEw
-LC01MzE5NzkyMjksMTA0Mzg0MzI0LDEyOTY5NTcxMTAsMTIxMT
-k3OTAxNywtMTU4MTUyMTIzOCwtOTkyOTczNjcwLDM1NTAwNTQ1
-OCwxNDU4NDczMjk4LC0yMzEzMjUzMDUsODY4MzMzMTc5LC05MD
-k3NjY1MzIsLTE5NTQ5Mjc2LDEzOTM2NzgwNzQsLTQxODc4OTAw
-MV19
+eyJoaXN0b3J5IjpbLTE2MjkyODk4ODcsLTMyOTcyOTU0Miw5Nz
+Q4NDM5NjMsNjA4MzMzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1
+MTAsLTUzMTk3OTIyOSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMj
+ExOTc5MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1
+NDU4LDE0NTg0NzMyOTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLT
+kwOTc2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5
+MDAxXX0=
 -->
