--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -531,18 +531,16 @@ temp = R*(0.2*[sin(th);cos(th);0*th] + quadrotor_body(1:3,4)*ones(1,20)) + quadr
 set(c4,'Xdata',temp(1,:),'Ydata',temp(2,:),'Zdata',temp(3,:));
 
 %% 运动轨迹
-
 set(line,'Xdata',position(1:i,1),'Ydata',position(1:i,2),'Zdata',position(1:i,3)); % 画四旋翼运动轨迹
-
 drawnow;
 end
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MjkyODk4ODcsLTMyOTcyOTU0Miw5Nz
-Q4NDM5NjMsNjA4MzMzMzMwLDE1ODQyMzMzMDMsLTEzMzA0ODU1
-MTAsLTUzMTk3OTIyOSwxMDQzODQzMjQsMTI5Njk1NzExMCwxMj
-ExOTc5MDE3LC0xNTgxNTIxMjM4LC05OTI5NzM2NzAsMzU1MDA1
-NDU4LDE0NTg0NzMyOTgsLTIzMTMyNTMwNSw4NjgzMzMxNzksLT
-kwOTc2NjUzMiwtMTk1NDkyNzYsMTM5MzY3ODA3NCwtNDE4Nzg5
-MDAxXX0=
+eyJoaXN0b3J5IjpbMTk5MjExNTc0NSwtMzI5NzI5NTQyLDk3ND
+g0Mzk2Myw2MDgzMzMzMzAsMTU4NDIzMzMwMywtMTMzMDQ4NTUx
+MCwtNTMxOTc5MjI5LDEwNDM4NDMyNCwxMjk2OTU3MTEwLDEyMT
+E5NzkwMTcsLTE1ODE1MjEyMzgsLTk5Mjk3MzY3MCwzNTUwMDU0
+NTgsMTQ1ODQ3MzI5OCwtMjMxMzI1MzA1LDg2ODMzMzE3OSwtOT
+A5NzY2NTMyLC0xOTU0OTI3NiwxMzkzNjc4MDc0LC00MTg3ODkw
+MDFdfQ==
 -->
