--- a/四旋翼无人机轨迹三维跟踪控制.md
+++ b/四旋翼无人机轨迹三维跟踪控制.md
@@ -536,15 +536,16 @@ drawnow;
 end
 ```
 
+---
+### 七、完整视频展⽰
 
-### 七、
 <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=114511948286065&bvid=BV1HiE1zcEJj&cid=29975577557&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMxMDc2ODg0MCwxOTkyMTE1NzQ1LC0zMj
-k3Mjk1NDIsOTc0ODQzOTYzLDYwODMzMzMzMCwxNTg0MjMzMzAz
-LC0xMzMwNDg1NTEwLC01MzE5NzkyMjksMTA0Mzg0MzI0LDEyOT
-Y5NTcxMTAsMTIxMTk3OTAxNywtMTU4MTUyMTIzOCwtOTkyOTcz
-NjcwLDM1NTAwNTQ1OCwxNDU4NDczMjk4LC0yMzEzMjUzMDUsOD
-Y4MzMzMTc5LC05MDk3NjY1MzIsLTE5NTQ5Mjc2LDEzOTM2Nzgw
-NzRdfQ==
+eyJoaXN0b3J5IjpbLTEzNzkxOTQ2NzcsMTk5MjExNTc0NSwtMz
+I5NzI5NTQyLDk3NDg0Mzk2Myw2MDgzMzMzMzAsMTU4NDIzMzMw
+MywtMTMzMDQ4NTUxMCwtNTMxOTc5MjI5LDEwNDM4NDMyNCwxMj
+k2OTU3MTEwLDEyMTE5NzkwMTcsLTE1ODE1MjEyMzgsLTk5Mjk3
+MzY3MCwzNTUwMDU0NTgsMTQ1ODQ3MzI5OCwtMjMxMzI1MzA1LD
+g2ODMzMzE3OSwtOTA5NzY2NTMyLC0xOTU0OTI3NiwxMzkzNjc4
+MDc0XX0=
 -->
