--- a/春风.md
+++ b/春风.md
@@ -1,7 +1,7 @@
 
 # 春风
 
-“我爱这春风一去而不返，纵使相逢亦为gu”
+“我爱这春风一去而不返，纵使相逢亦为过客。我爱这春风一夜而知春，纵使再见亦终相遇。我爱这春风一刻e”
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzA3NDk2NTY3XX0=
+eyJoaXN0b3J5IjpbMTc3NTI1NzkwOV19
 -->
