面试.md updated from https://stackedit.cn/

--- a/面试.md
+++ b/面试.md
@@ -17,7 +17,8 @@
 • 执行力强：开源10+项目，撰写20篇技术文档，持续迭代优化。
 我深知自动化对数学与工程能力的高要求，目前已通过Coursera补充线性代数与电路分析知识，并计划暑期研读《多旋翼无人机设计与控制》。如果有幸加入自动化专业，我将全力以赴，以技术驱动创新，谢谢各位老师！
 ---
+## 每段讲“专业内容·+·兴趣来源·+·自主行动·+·未来规划”四要素，逻辑清晰。
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc5NjcxNDk2Ml19
+eyJoaXN0b3J5IjpbOTA4NzYzNTgwLC03OTY3MTQ5NjJdfQ==
 -->
