面试.md updated from https://stackedit.cn/

--- a/面试.md
+++ b/面试.md
@@ -365,8 +365,142 @@
 
 ----
 
+### **问题1：自动化专业的核心是“控制”？能举个你理解的控制系统例子吗？**
 
+**回答**：  
+自动化专业的核心确实是“控制”，即通过传感器、控制器和执行器构建闭环系统，实现目标的高精度调节与自主运行。以我完成的**四旋翼无人机仿真项目**为例：
+
+1.  **传感器层**：通过陀螺仪和加速度计实时采集无人机的姿态角与角速度数据；
+    
+2.  **控制层**：采用双闭环PID算法，内环（姿态环）调节角速度，外环（位置环）生成目标姿态指令；
+    
+3.  **执行层**：根据PID输出调整四个电机的PWM占空比，实现悬停、轨迹跟踪等功能。  
+    这一系统完美体现了“感知-决策-执行”的闭环逻辑，悬停精度可达±5cm，与工业自动化中的机械臂控制、智能温控系统原理相通。
+    
+
+----------
+
+### **问题2：如何理解“人工智能和自动化的融合”？是否关注过相关项目或产品？**
+
+**回答**：  
+人工智能与自动化的融合，是通过AI的数据分析与决策能力，增强传统控制系统的自适应性和智能化水平。具体体现在：
+
+1.  **AI优化控制**：例如在无人机控制中，传统PID需手动调参，而结合强化学习（RL）可在线优化参数，适应动态环境（如抗风扰）；
+    
+2.  **智能感知与决策**：我的**AI语音助手项目**已初步实践这一融合——通过轻量化DeepSeek V3模型处理语音指令，再由ESP32-S3执行操作（如调速、报警），噪声环境下识别率仍达80%以上。
+    
+
+**关注的项目与产品**：
+
+-   **大疆机甲大师**：集成视觉SLAM（AI）与运动控制（自动化），实现自主导航与目标追踪；
+    
+-   **波士顿动力Spot机器人**：结合深度学习与液压控制，完成复杂地形行走与任务规划。
+    
+
+未来，我计划在自动化专业中深入探索ROS+Gazebo仿真与AI算法的结合，例如开发基于视觉的无人机避障系统，推动工业4.0的智能化升级。
+
+----
+
+### **1. 个人兴趣偏向哪类？目前的原专业是什么？想转出的原因是什么？**
+
+**回答**：  
+我的兴趣核心是**智能控制与机器人系统**，尤其沉迷于通过软硬协同实现复杂系统的自主优化。目前就读于**工商管理专业**，但通过自学和项目实践，我深刻认识到原专业课程难以支撑我的技术追求。例如，在完成四旋翼无人机仿真（悬停精度±5cm）和AI语音助手（噪声识别率80%+）等项目中，我意识到自动化“感知-决策-执行”的闭环逻辑才是我的兴趣所在。转专业是为了系统学习控制理论、ROS框架等核心知识，为成为无人机飞控或机器人算法工程师奠定基础。
+
+----------
+
+### **2. 如何弥补专业基础差距？**
+
+**回答**：  
+我通过以下方式补足自动化所需的数理与工程基础：
+
+1.  **课程自学**：已掌握高等数学（90+）、电路分析（项目实践应用）、自动控制原理（Simulink建模）；
+    
+2.  **项目驱动学习**：在温控风扇项目中用微分方程优化PID参数，在无人机仿真中应用牛顿-欧拉方程；
+    
+3.  **系统规划**：暑期计划学习《现代控制理论》与《机器人学导论》，并通过Coursera补充线性代数与信号处理知识；
+    
+4.  **工具链强化**：用MATLAB验证算法、立创EDA设计PCB，确保理论到实践的闭环能力。
+    
+
+----------
+
+### **3. 未来规划（短期、中期、长期）**
+
+**回答**：
+
+-   **短期（1年内）**：
+    
+    -   学习PX4飞控框架，在Gazebo中复现无人机自主导航；
+        
+    -   选修《现代控制理论》《ROS机器人开发》，参与实验室课题（如移动机器人SLAM）。
+        
+-   **中期（2-3年）**：
+    
+    -   组队参加RoboMaster竞赛，开发基于ROS的智能巡检机器人；
+        
+    -   研究LQR算法与自适应控制，优化无人机抗扰动能力。
+        
+-   **长期（职业目标）**：
+    
+    -   成为无人机飞控工程师或机器人算法工程师，目标企业：大疆、极飞科技；
+        
+    -   推动工业智能化，探索数字孪生与AI驱动的控制技术。
+        
+
+----------
+
+### **4. 电气专业课程难度较大，如何应对？**
+
+**回答**：
+
+1.  **优先级管理**：
+    
+    -   核心课程（如电路、自动控制原理）投入70%精力，通过课后习题与仿真巩固；
+        
+    -   选修课（如电力电子）结合项目实践（如设计电机驱动电路）加深理解。
+        
+2.  **主动求助**：
+    
+    -   加入实验室与学长组队，学习工程经验；
+        
+    -   利用Office Hour向教授请教难点（如状态空间分析）。
+        
+3.  **以赛代练**：
+    
+    -   通过蓝桥杯、电子设计竞赛等实战，将抽象理论转化为代码与硬件成果。
+        
+
+----------
+
+### **5. 如果转专业成功，如何规划大学生活？**
+
+**回答**：  
+我的大学生活将围绕**技术深耕**与**全面发展**展开：
+
+1.  **课程学习**：
+    
+    -   主攻控制理论、嵌入式开发、机器人学，GPA目标3.8+；
+        
+    -   辅修数学或计算机科学课程，强化算法基础。
+        
+2.  **实验室与竞赛**：
+    
+    -   大二加入智能控制实验室，参与无人机或机器人课题；
+        
+    -   大三带队参加RoboMaster，目标区域赛奖项。
+        
+3.  **开源与社区**：
+    
+    -   维护GitHub仓库（现有10+项目），提交PX4飞控代码贡献；
+        
+    -   撰写技术博客，分享Simulink建模与PID调参经验。
+        
+4.  **软技能提升**：
+    
+    -   每周3次羽毛球训练（校队成员），保持体能与团队协作意识；
+        
+    -   参与技术讲座与行业展会，拓展视野。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQzNTcxMzAwNyw5MDg3NjM1ODAsLTc5Nj
+eyJoaXN0b3J5IjpbMTczNDU5Njk3Miw5MDg3NjM1ODAsLTc5Nj
 cxNDk2Ml19
 -->
