面试.md updated from https://stackedit.cn/

--- a/面试.md
+++ b/面试.md
@@ -1,10 +1,10 @@
 # 自我介绍
 各位老师好！
-我是冯亚超，湖南工业大学工商管理专业大一学生，19岁。今天非常荣幸能参与自动化专业的面试。虽然我的原专业是工商管理，但通过持续的自学与实践，我已深度涉足嵌入式开发与智能控制领域，并希望转入自动化专业，系统学习控制理论与工程应用，为成为机器人算法工程师或无人机飞控工程师奠定基础。
+我是冯亚超，原专业是工商管理专业，今天非常荣幸能参与自动化专业的面试。虽然我的原专业是工商管理，但通过持续的自学与实践，我已深度涉足嵌入式开发与智能控制领域，并希望转入自动化专业，系统学习控制理论与工程应用，为成为机器人算法工程师或无人机飞控工程师奠定基础。
 技术能力与项目经验
 过去一年，我独立完成了多个项目，形成了“硬件-算法-系统”的全栈能力：
 1. 四旋翼无人机仿真系统：基于Simulink搭建六自由度模型，通过双闭环PID控制实现悬停（误差±5cm）、螺旋轨迹跟踪等功能，代码开源并获GitHub 30+ Star。
-2. 智能温控风扇系统：使用STM32和PID算法，将温度误差优化至±1℃，响应时间缩短至2秒，代码被Fork 50+次，获小型家电企业合作意向。
+2. 智能温控风扇系统：使用51单片机，实现温度阈值报警与PWM调速功能，集成DS18B20温度传感器与蜂鸣器模块
 3. AI语音助手：在ESP32-S3上部署轻量化DeepSeek模型，支持中文唤醒与多轮对话，噪声环境下识别率仍达80%以上。
 此外，我熟练掌握STM32 HAL库、立创EDA多层PCB设计，并通过蓝桥杯嵌入式竞赛（校赛一等奖）强化了实时系统开发能力。
 转专业动机与未来规划
@@ -501,6 +501,6 @@
         
     -   参与技术讲座与行业展会，拓展视野。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTczNDU5Njk3Miw5MDg3NjM1ODAsLTc5Nj
-cxNDk2Ml19
+eyJoaXN0b3J5IjpbLTEzMDU2OTU4NzMsMTczNDU5Njk3Miw5MD
+g3NjM1ODAsLTc5NjcxNDk2Ml19
 -->
