面试.md updated from https://stackedit.cn/

--- a/面试.md
+++ b/面试.md
@@ -5,8 +5,8 @@
 过去一年，我独立完成了多个项目，形成了“硬件-算法-系统”的全栈能力：
 1. 四旋翼无人机仿真系统：基于Simulink搭建六自由度模型，通过双闭环PID控制实现悬停（误差±5cm）、螺旋轨迹跟踪等功能，代码开源并获GitHub 30+ Star。
 2. 智能温控风扇系统：使用51单片机，实现温度阈值报警与PWM调速功能，集成DS18B20温度传感器与蜂鸣器模块
-3. AI语音助手：在ESP32-S3上部署轻量化DeepSeek模型，支持中文唤醒与多轮对话，噪声环境下识别率仍达80%以上。
-此外，我熟练掌握STM32 HAL库、立创EDA多层PCB设计，并通过蓝桥杯嵌入式竞赛（校赛一等奖）强化了实时系统开发能力。
+3. AI语音助手：在ESP32-S3上部署轻量化DeepSeek V3模型，支持中文唤醒与多轮对话
+此外，我熟练掌握STM32 HAL库、立创EDA PCB设计，并通过蓝桥杯嵌入式竞赛（校赛一等奖）强化了嵌入式的学习与开发能力。
 转专业动机与未来规划
 自动化“感知-决策-执行”的闭环逻辑深深吸引了我。通过项目实践，我意识到原专业课程难以支撑我在控制理论、ROS框架等领域的深度探索。若成功转入，我的计划是：
 • 短期：系统学习《现代控制理论》，结合PX4飞控与Gazebo仿真，复现无人机自主导航功能；
@@ -501,6 +501,6 @@
         
     -   参与技术讲座与行业展会，拓展视野。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMDU2OTU4NzMsMTczNDU5Njk3Miw5MD
-g3NjM1ODAsLTc5NjcxNDk2Ml19
+eyJoaXN0b3J5IjpbMTIwMDE3MDk3OCwxNzM0NTk2OTcyLDkwOD
+c2MzU4MCwtNzk2NzE0OTYyXX0=
 -->
