--- a/面试.md
+++ b/面试.md
@@ -9,8 +9,8 @@
 此外，我熟练掌握STM32 HAL库、立创EDA PCB设计，并通过蓝桥杯嵌入式竞赛（校赛一等奖）强化了嵌入式的学习与开发能力。
 转专业动机与未来规划
 自动化“感知-决策-执行”的闭环逻辑深深吸引了我。通过项目实践，我意识到原专业课程难以支撑我在控制理论、ROS框架等领域的深度探索。若成功转入，我的计划是：
-• 短期：系统学习《现代控制理论》，结合PX4飞控与Gazebo仿真，复现无人机自主导航功能；
-• 长期：参与实验室机器人课题，探索SLAM与数字孪生技术，目标进入大疆、极飞科技等企业，推动工业智能化升级。
+• 短期：系统学习《现代控制理论》，结合PX4飞控与stm32 hal库，将无人机改写优化完善
+• 长期：参与实验室机器人课题，探索ROS2、SLAM与数字孪生技术
 核心优势
 • 技术闭环：从建模（Simulink）到硬件（PCB）再到部署（嵌入式代码），独立完成全流程开发；
 • 高效学习：1个月掌握STM32 HAL库，2周复现AI语音项目；
@@ -486,6 +486,6 @@
         
     -   参与技术讲座与行业展会，拓展视野。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTgxMDkzMTg1LDE3MzQ1OTY5NzIsOTA4Nz
-YzNTgwLC03OTY3MTQ5NjJdfQ==
+eyJoaXN0b3J5IjpbLTM4ODEzNDc4OSwxNzM0NTk2OTcyLDkwOD
+c2MzU4MCwtNzk2NzE0OTYyXX0=
 -->
