面试.md updated from https://stackedit.cn/

--- a/面试.md
+++ b/面试.md
@@ -21,7 +21,7 @@
 
 #### **1. 学习目标与路径设计**
 
--   **核心目标**：通过蓝鸟四轴无人机（售价158元）的二次开发，深入掌握**PID控制、嵌入式系统设计、无人机动力学建模**，并衔接Simulink仿真与实物验证。m
+-   **核心目标**：通过蓝鸟四轴无人机（售价158元）的二次开发，深入掌握**PID控制、嵌入式系统设计、无人机动力学建模**，并衔接Simulink仿真与实物验证。
     
 -   **学习路径**
 
@@ -31,7 +31,7 @@
         
     -   **C. 参数调优**：修改PID参数（如调整积分项权重），优化悬停稳定性（目标：从±10cm提升至±5cm）。
         
-    -   **D. 功能扩展**：添加超声波定高模块或蓝牙通信，实现手机端控制。
+    -   **D. 功能扩展**：添加超声波定高模块或蓝牙通信，开发上位机控制，实现手机端操控
         
     -   **E. 综合项目**：结合Simulink模型，实现“仿真-实物”闭环验证，或开发基于视觉的自主避障功能。
         
@@ -486,6 +486,6 @@
         
     -   参与技术讲座与行业展会，拓展视野。
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDY2ODQ0NjE0LDE3MzQ1OTY5NzIsOTA4Nz
-YzNTgwLC03OTY3MTQ5NjJdfQ==
+eyJoaXN0b3J5IjpbLTE5OTk4MjczMjUsMTczNDU5Njk3Miw5MD
+g3NjM1ODAsLTc5NjcxNDk2Ml19
 -->
